--- a/templates/users.html
+++ b/templates/users.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+    <caption>
+    Lista użytkowników
+    </caption>
     <table>
             <tr>
                 <th>ID</th>
