Wysyłanie komunikatów z formularza

--- a/templates/user_messages.html
+++ b/templates/user_messages.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <div style="float: left;">
+        <caption>
+        Skrzynka odbiorcza
+        </caption>
         <table>
                 <tr>
                     <th>Nr</th>
