--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,16 @@ table, th, td, tr {
 </style>
 
 <body>
+
+<div style="float: left; margin: 15px;">
+    <a href="/">STRONA GŁÓWNA</a>
+    <a href="/">NOWY UŻYTKOWNIK</a>
+    <a href="/">WYŚLIJ WIADOMOŚĆ</a>
+    <a href="/">USUŃ WIADOMOŚCI</a>
+</div>
+<div style="float: left">
 {% block content %}
 
 {% endblock content %}
+</div>
 </body>
