Formularz wysyłania wiadomości

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,11 @@ table, th, td, tr {
 
 <body>
 
-<div style="float: left; margin: 15px;">
-    <a href="/">STRONA GŁÓWNA</a>
-    <a href="/">NOWY UŻYTKOWNIK</a>
-    <a href="/">WYŚLIJ WIADOMOŚĆ</a>
-    <a href="/">USUŃ WIADOMOŚCI</a>
+<div style="margin: 15px;">
+    <h3>Nawigacja</h3>
+    <a href="/">UŻYTKOWNICY</a>
+    <a href="/new-user">NOWY UŻYTKOWNIK</a>
+    <a href="/send">WYŚLIJ WIADOMOŚĆ</a>
 </div>
 <div style="float: left">
 {% block content %}
