--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -5,10 +5,11 @@
 
 <form method=post>
   <dl>
-    {{ render_field(form.username) }}
-    {{ render_field(form.email) }}
-    {{ render_field(form.password) }}
-    {{ render_field(form.confirm) }}
+      {{ form.csrf_token }}
+      {{ render_field(form.username) }}
+      {{ render_field(form.email) }}
+      {{ render_field(form.password) }}
+      {{ render_field(form.confirm) }}
   </dl>
   <p><input type=submit value=Zapisz>
 </form>
